# django-react-todo

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/todo/: admin.py  models.py  views.py
backend/todo/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: Modal.js
