[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django backend, for todolist with react frontend"
authors = ["Hensel Jahja <henseljahja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^3.9.2"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.8.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
